added profile page support
